# GalleryThief

./: LICENSE  README.md  mask.py  performer.py  pyproject.toml  requirements.txt  setup.py  strategies.py
src/GalleryThief/: mask.py  performer.py  strategies.py
