[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gallery-thief"
version = "1.0.1"
authors = [
  { name="Kirill Voloshin", email="kirill.voloshin.98@ya.ru" },
]
description = "Simple python package for scraping images from different search engines by prompt."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/viktor-akusoff/GalleryThief"
"Bug Tracker" = "https://github.com/viktor-akusoff/GalleryThief/issues"